{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 87,
  "lineage": "647ac1db-8ff2-cdcd-e292-f4acb7688275",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be42c5e8462af116",
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:instance/i-0ed78eb33daa97fb9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "single-instance-20241006060501124900000003",
            "id": "i-0ed78eb33daa97fb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b52b599ad1cf461",
            "private_dns": "ip-10-0-0-136.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:376129850147:key/033ca827-20b0-4060-994b-b726c7255133",
                "tags": {
                  "Name": "my-root-block"
                },
                "tags_all": {
                  "Name": "my-root-block"
                },
                "throughput": 200,
                "volume_id": "vol-09e060f1f2a6c9469",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0171baaadf0141cd8",
            "tags": {
              "Environment": "dev",
              "Name": "layhua-vm1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "layhua-vm1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-039d090bde38ff3e8"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be42c5e8462af116",
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:instance/i-045079755163eb2b6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:376129850147:key/033ca827-20b0-4060-994b-b726c7255133",
                "tags": {
                  "MountPoint": "/data"
                },
                "tags_all": {
                  "MountPoint": "/data"
                },
                "throughput": 200,
                "volume_id": "vol-09829e0fa5c70095c",
                "volume_size": 5,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tableau-vm1-20241006060501187800000004",
            "id": "i-045079755163eb2b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e3e7b10ca40c9c4",
            "private_dns": "ip-10-0-0-134.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:376129850147:key/033ca827-20b0-4060-994b-b726c7255133",
                "tags": {
                  "Name": "my-root-block"
                },
                "tags_all": {
                  "Name": "my-root-block"
                },
                "throughput": 200,
                "volume_id": "vol-0c05402c8bafd0a13",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f1129e5839b4bfb",
            "tags": {
              "Environment": "dev",
              "Name": "tableau-vm1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tableau-vm1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd87dd0635d208d2"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_instance_1.aws_iam_instance_profile.this",
            "module.ec2_instance_1.aws_iam_role.this",
            "module.ec2_instance_1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance_1.data.aws_partition.current",
            "module.ec2_instance_1.data.aws_ssm_parameter.this",
            "module.security_group_instance.aws_security_group.this",
            "module.security_group_instance.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_tableau_vm2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be42c5e8462af116",
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:instance/i-0ed295a4a842d2d5a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:376129850147:key/033ca827-20b0-4060-994b-b726c7255133",
                "tags": {
                  "MountPoint": "/data"
                },
                "tags_all": {
                  "MountPoint": "/data"
                },
                "throughput": 200,
                "volume_id": "vol-0a34d0dc087054fad",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tableau-vm1-20241006062604453900000003",
            "id": "i-0ed295a4a842d2d5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02d2596f5d765def1",
            "private_dns": "ip-10-0-0-185.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:376129850147:key/033ca827-20b0-4060-994b-b726c7255133",
                "tags": {
                  "Name": "my-root-block"
                },
                "tags_all": {
                  "Name": "my-root-block"
                },
                "throughput": 200,
                "volume_id": "vol-04e1575c916a4520f",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f1129e5839b4bfb",
            "tags": {
              "Environment": "dev",
              "Name": "tableau-vm2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tableau-vm2",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd87dd0635d208d2"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_tableau_vm2.aws_iam_instance_profile.this",
            "module.ec2_tableau_vm2.aws_iam_role.this",
            "module.ec2_tableau_vm2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_tableau_vm2.data.aws_partition.current",
            "module.ec2_tableau_vm2.data.aws_ssm_parameter.this",
            "module.security_group_instance.aws_security_group.this",
            "module.security_group_instance.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:security-group/sg-0cd87dd0635d208d2",
            "description": "Security Group for EC2 Instance Egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0cd87dd0635d208d2",
            "ingress": [],
            "name": "ex-ec2-ec2-20241006061842517500000001",
            "name_prefix": "ex-ec2-ec2-",
            "owner_id": "376129850147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3155342824",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd87dd0635d208d2",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_instance.aws_security_group.this",
            "module.security_group_instance.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:network-acl/acl-08b97ad7c88de42db",
            "default_network_acl_id": "acl-08b97ad7c88de42db",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08b97ad7c88de42db",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "376129850147",
            "subnet_ids": [
              "subnet-0276886b9fbabc87c",
              "subnet-02f1129e5839b4bfb",
              "subnet-054e7cc9ffdb70a2e"
            ],
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:route-table/rtb-0eab8c77f439f1bed",
            "default_route_table_id": "rtb-0eab8c77f439f1bed",
            "id": "rtb-0eab8c77f439f1bed",
            "owner_id": "376129850147",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:security-group/sg-06f96bd0c8deb9783",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06f96bd0c8deb9783",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "376129850147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:route-table/rtb-025ae4011bd254615",
            "id": "rtb-025ae4011bd254615",
            "owner_id": "376129850147",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff360871d25fc2bd",
            "route_table_id": "rtb-025ae4011bd254615",
            "subnet_id": "subnet-02f1129e5839b4bfb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0027001916a8316ac",
            "route_table_id": "rtb-025ae4011bd254615",
            "subnet_id": "subnet-054e7cc9ffdb70a2e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0507e9d7488cc7a35",
            "route_table_id": "rtb-025ae4011bd254615",
            "subnet_id": "subnet-0276886b9fbabc87c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:subnet/subnet-02f1129e5839b4bfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f1129e5839b4bfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129850147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:subnet/subnet-054e7cc9ffdb70a2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054e7cc9ffdb70a2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129850147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:subnet/subnet-0276886b9fbabc87c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0276886b9fbabc87c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129850147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:vpc/vpc-060ae4eacb4d94d69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b97ad7c88de42db",
            "default_route_table_id": "rtb-0eab8c77f439f1bed",
            "default_security_group_id": "sg-06f96bd0c8deb9783",
            "dhcp_options_id": "dopt-0554c87156931d4c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-060ae4eacb4d94d69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eab8c77f439f1bed",
            "owner_id": "376129850147",
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:security-group/sg-063ef5396f1f42cd9",
            "description": "VPC endpoint security group",
            "egress": [],
            "id": "sg-063ef5396f1f42cd9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "HTTPS from subnets",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ex-ec2-vpc-endpoints-20241006061842517600000002",
            "name_prefix": "ex-ec2-vpc-endpoints-",
            "owner_id": "376129850147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2-vpc-endpoints-",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2-vpc-endpoints-",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "HTTPS from subnets",
            "from_port": 443,
            "id": "sgrule-3414854156",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-063ef5396f1f42cd9",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:vpc-endpoint/vpce-00a2b1b59f49d001a",
            "dns_entry": [
              {
                "dns_name": "vpce-00a2b1b59f49d001a-krhc4ccv.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00a2b1b59f49d001a-krhc4ccv-ap-southeast-1b.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00a2b1b59f49d001a-krhc4ccv-ap-southeast-1a.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00a2b1b59f49d001a-krhc4ccv-ap-southeast-1c.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ec2messages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0343584ZLIDHE35QZZZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00a2b1b59f49d001a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00961f6466a1c4208",
              "eni-03d268e08df53ae22",
              "eni-04ea814b4cf0a81fa"
            ],
            "owner_id": "376129850147",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-063ef5396f1f42cd9"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.229",
                "subnet_id": "subnet-02f1129e5839b4bfb"
              },
              {
                "ipv4": "10.0.1.154",
                "subnet_id": "subnet-054e7cc9ffdb70a2e"
              },
              {
                "ipv4": "10.0.2.186",
                "subnet_id": "subnet-0276886b9fbabc87c"
              }
            ],
            "subnet_ids": [
              "subnet-0276886b9fbabc87c",
              "subnet-02f1129e5839b4bfb",
              "subnet-054e7cc9ffdb70a2e"
            ],
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2-ec2messages",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2-ec2messages",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:vpc-endpoint/vpce-02b6ed1aa600aeed1",
            "dns_entry": [
              {
                "dns_name": "vpce-02b6ed1aa600aeed1-zdf4w1c3.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-02b6ed1aa600aeed1-zdf4w1c3-ap-southeast-1a.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-02b6ed1aa600aeed1-zdf4w1c3-ap-southeast-1c.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-02b6ed1aa600aeed1-zdf4w1c3-ap-southeast-1b.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssm.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z088706632IGY0HM462D4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02b6ed1aa600aeed1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a280bde0cdaeb59f",
              "eni-0af9b864ce9361aa5",
              "eni-0dceecfad819ac700"
            ],
            "owner_id": "376129850147",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-063ef5396f1f42cd9"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.27",
                "subnet_id": "subnet-02f1129e5839b4bfb"
              },
              {
                "ipv4": "10.0.1.32",
                "subnet_id": "subnet-054e7cc9ffdb70a2e"
              },
              {
                "ipv4": "10.0.2.90",
                "subnet_id": "subnet-0276886b9fbabc87c"
              }
            ],
            "subnet_ids": [
              "subnet-0276886b9fbabc87c",
              "subnet-02f1129e5839b4bfb",
              "subnet-054e7cc9ffdb70a2e"
            ],
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2-ssm",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2-ssm",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129850147:vpc-endpoint/vpce-070604c32ef36ad55",
            "dns_entry": [
              {
                "dns_name": "vpce-070604c32ef36ad55-ejf4joy8.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-070604c32ef36ad55-ejf4joy8-ap-southeast-1a.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-070604c32ef36ad55-ejf4joy8-ap-southeast-1c.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-070604c32ef36ad55-ejf4joy8-ap-southeast-1b.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssmmessages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0336000TCQYTW57DBAE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-070604c32ef36ad55",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0557d808fb960c6c9",
              "eni-06209366232fa1775",
              "eni-0c9d905e38dd130d7"
            ],
            "owner_id": "376129850147",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-063ef5396f1f42cd9"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.54",
                "subnet_id": "subnet-02f1129e5839b4bfb"
              },
              {
                "ipv4": "10.0.1.130",
                "subnet_id": "subnet-054e7cc9ffdb70a2e"
              },
              {
                "ipv4": "10.0.2.164",
                "subnet_id": "subnet-0276886b9fbabc87c"
              }
            ],
            "subnet_ids": [
              "subnet-0276886b9fbabc87c",
              "subnet-02f1129e5839b4bfb",
              "subnet-054e7cc9ffdb70a2e"
            ],
            "tags": {
              "Example": "ex-ec2",
              "Name": "ex-ec2-ssmmessages",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-ec2",
              "Name": "ex-ec2-ssmmessages",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-060ae4eacb4d94d69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}